# effective-octo-broccoli-fastAPI

./: .gitignore  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml  ruff.toml  slug.py
alembic/: env.py
alembic/versions/: 8ef0b1a6d15a_description.py
scripts/: seed.py
src/python_for_pros/: __init__.py
src/release_tracker/: config.py  crud.py  database.py  dependencies.py  main.py  models.py
tests/: conftest.py  test_api.py  test_main.py  test_slug.py
