[project]
name = "release-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "subikstha", email = "subsatch@gmail.com" }
]
requires-python = "==3.14.*"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.38",
]

[tool.fastapi]
entrypoint = "release_tracker.main:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
